<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogs"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_SnackBar"
        android:background="#48A0E4"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_alertDialog"
        android:background="#48A0E4"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_customDialog"
        android:background="#48A0E4"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_customProgressDialog"
        android:background="#48A0E4"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_progress_dialog"
        android:layout_margin="16dp"/>

</LinearLayout>