<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:backgroundTint="#22B5A7">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/text_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_will_be_description_or_detail"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_Title"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#DD0752"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/text_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/text_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>